--- a/contracts_for_concurrency.tex
+++ b/contracts_for_concurrency.tex
@@ -1,3 +1,4 @@
+% vim:spelllang=en_us:spell
 %==============================================================================
 % tento soubor pouzijte jako zaklad
 % this file should be used as a base for the thesis
@@ -152,7 +153,7 @@
   RoadRunner.},
   abstract.en={Contracts for concurrency describes required atomicity of method
   sequences in concurrent programs. This work aims at implementing a dynamic
-  analyser to verify programs written in Java against contracts. The analyser is
+  analyzer to verify programs written in Java against contracts. The analyzer is
   built upon the RoadRunner framework.},
   declaration={I hereby declare that this term project was prepared as an
   original work by the author under the supervision of Ing. Aleš Smrčka, Ph.D.
